# sysmon-dashboard

./: .gitignore  README.md
sysmon-dashboard/: CMakeLists.txt  LinuxSystemMonitor.cpp  LinuxSystemMonitor.h  dashboardwindow.cpp  dashboardwindow.h  dashboardwindow.ui  metriccard.cpp  metriccard.h  sparklinewidget.cpp  sparklinewidget.h  sysmon_test
